dhall/tests/type-errors/unit/RecursiveRecordTypeMergeRhsNotRecordType.txt
Type error: error: RecordTypeMergeRequiresRecordType
 --> <current file>:1:0
  |
1 | {} ⩓ Bool
  | ^^^^^^^^^ RecordTypeMergeRequiresRecordType
  |
